--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <head>
      <meta charset="UTF-8">
     <meta name="arthor" content="Tek_Glitch">
-    <meta name="description" content="Hi, I'm Tek and this page is about me.">
-    <link rel="stylesheet" href="main.css">
+    <meta name="description" content="Hi, I'm Tek and this page is for testing purposes.">
+    <link rel="stylesheet" href="_config.yml">
   </head>
 
   <body>
