--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
         <li><p>I've heard good things about the Artic</p></li>
 
-            <li><p>I've heard good things about the going here:</p>
+            <li><p>I've heard good things about going, here:</p>
             <address>
                 Santa
                 123 Elf Road <br>
