--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
 
             <hr>
-            &lt;&lt;&lt; &copy; <a href="/about.html">Tek-Glitch</a> &gt;&gt;&gt;
+            &lt;&lt;&lt; &copy; <a href="about.html">Tek-Glitch</a> &gt;&gt;&gt;
     </body>
 
 </html>
