--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="en-GB">
     <head>
         <meta charset="UTF-8">
+        <title>index.html</title>
         <meta name="author" content="Tek-Glitch">
         <meta name="description" content="This page contains all the things I am learning to create as I learn HTML.>
         <title>My first web page</title>
         <link rel="icon" href="/html5.png" type="image/png">
-        <link rel="stylesheet" href="/main.css" type="text/css">
+        <link rel="stylesheet" href="main.css" type="text/css">
     </head>
   
     <body>
